Fixed single images on mobile

--- a/src/static/stylus/styles/Single.styl
+++ b/src/static/stylus/styles/Single.styl
@@ -1,30 +1,31 @@
-.single-content--container
-	max-width 900px
-	display flex
-	margin 2rem auto
-	flex-basis calc(33.333% - 4rem)
-	flex-grow 1
-	flex-shrink 0
-	padding 2rem
-	border 1px solid lightgray
-	background white
-	box-shadow 0 0 0 5px rgba(0,0,0,0.03);
-	position relative
-	p
-		font-size .65rem
-		margin 0
-	.single-photo-and-caption--container
-		box-shadow none
-		margin 0 2rem 0 0
-		border 0
-		padding 0
-		flex 1 0 60%
-		max-width 60%
-		figure
+
+.single-content--parent-container
+	.single-content--container
+		max-width 900px
+		display flex
+		margin 2rem auto
+		padding 2rem
+		flex-basis calc(33.333% - 4rem)
+		flex-grow 1
+		flex-shrink 0
+		border 1px solid lightgray
+		background white
+		box-shadow 0 0 0 5px rgba(0,0,0,0.03);
+		p
+			font-size .65rem
 			margin 0
-		img
-			width 100%
-			margin 0
+		.single-photo-and-caption--container
+			box-shadow none
+			margin 0 2rem 0 0
+			border 0
+			padding 0
+			flex 1 0 60%
+			max-width 60%
+			figure
+				margin 0
+			img
+				width 100%
+				margin 0
 
 .comments-container
 	flex 1 0 40%
